@@ -3,7 +3,7 @@
 use strict;
 
 use Data::Dumper;
-use Test::More tests => 6;
+use Test::More tests => 9;
 
 BEGIN {
     use_ok( 'JavaScript::Lint' );
@@ -16,11 +16,13 @@ my @tests = (
     {
         name   => 'basic',
         js     => 'var two = 1+1;',
+        opts   => {},
         errors => [],
     },
     {
         name   => 'missing semicolon',
         js     => 'var two = 1+1',
+        opts   => {},
         errors => [
             {
                 'character' => 14,
@@ -34,6 +36,7 @@ my @tests = (
     {
         name   => 'missing semicolon and late declaration',
         js     => 'two = 1+1;var two',
+        opts   => {},
         errors => [
             {
                 'character' => 15,
@@ -61,6 +64,7 @@ my @tests = (
     {
         name   => 'nested comment, like prototype.js',
         js     => "/* nested\n/* comment */",
+        opts   => {},
         errors => [
             {
                 'character' => 1,
@@ -79,11 +83,37 @@ my @tests = (
                 'reason'    => 'Cannot proceed.'
             }
         ],
-    }
+    },
+    {
+        name   => 'allow undefined variables',
+        js     => 'alert(42);',
+        opts   => {},
+        errors => [],
+    },
+    {
+        name   => 'disallow undefined variables',
+        js     => 'alert(42);',
+        opts   => { 'undef' => 1 },
+        errors => [
+            {
+                'character' => 1,
+                'evidence'  => 'alert(42);',
+                'id'        => '(error)',
+                'line'      => 1,
+                'reason'    => 'Undefined variable: alert',
+            }
+        ],
+    },
+    {
+        name   => 'random options allowed',
+        js     => 'alert(42);',
+        opts   => { xyzzy => 1 },
+        errors => [],
+    },
 );
 
 foreach my $t ( @tests ) {
-    my @got = jslint( $t->{ js } );
+    my @got = jslint( $t->{ js }, %{ $t->{ opts } } );
     is_deeply( \@got, $t->{ errors }, $t->{ name } )
       or diag(
         Data::Dumper->new( [ \@got ], ['*errors'] )->Indent( 1 )->Sortkeys( 1 )
