@@ -4,6 +4,7 @@ Revision history for Perl extension JavaScript::Lint.
     - Turn a fatal error into something more readable.  It happens that I
       missed a comment in the JSLint source pointing out that it returned
       nulls...
+    - Allow passing in options to jslint().
 
 0.01  Fri Jun  2 14:07:53 2006
 	- original version; created by h2xs 1.23 with options
